<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.7</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.epam.esm</groupId>
    <artifactId>advanced</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>advanced</name>
    <description>REST API ADVANCED</description>
    <properties>
        <java.version>17</java.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>1.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-hateoas</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.0.31</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>com.epam.esm</groupId>
            <artifactId>advanced</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-ui</artifactId>
            <version>1.6.4</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>2.7.7</version>
                <!--                <executions>-->
                <!--                    <execution>-->
                <!--                        <id>pre-integration-test</id>-->
                <!--                        <goals>-->
                <!--                            <goal>start</goal>-->
                <!--                        </goals>-->
                <!--                    </execution>-->
                <!--                    <execution>-->
                <!--                        <id>post-integration-test</id>-->
                <!--                        <goals>-->
                <!--                            <goal>stop</goal>-->
                <!--                        </goals>-->
                <!--                    </execution>-->
                <!--                </executions>-->
                <!--            </plugin>-->
                <!--            <plugin>-->
                <!--                <groupId>org.springdoc</groupId>-->
                <!--                <artifactId>springdoc-openapi-maven-plugin</artifactId>-->
                <!--                <version>0.2</version>-->
                <!--                <executions>-->
                <!--                    <execution>-->
                <!--                        <phase>integration-test</phase>-->
                <!--                        <goals>-->
                <!--                            <goal>generate</goal>-->
                <!--                        </goals>-->
                <!--                    </execution>-->
                <!--                </executions>-->
                <!--                <configuration>-->
                <!--                    <apiDocsUrl>http://localhost:8080/v3/api-docs</apiDocsUrl>-->
                <!--                    <outputFileName>openapi.json</outputFileName>-->
                <!--                    <outputDir>${project.build.directory}</outputDir>-->
                <!--                </configuration>-->
            </plugin>

        </plugins>

    </build>
</project>
